--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,10 +16,10 @@
 				<a class="nav-link" id="id01" href="#workSection">Work</a>
 			</li>
 			<li class="nav-item navbar-right">
-				<a class="nav-link" id="id01" href="#">About</a>
+				<a class="nav-link" id="id02" href="#">About</a>
 			</li>
 			<li class="nav-item navbar-right">
-				<a class="nav-link" id="id01" href="assets/file/resume-jy.pdf" target="_blank">Resume</a>
+				<a class="nav-link" id="id03" href="assets/file/resume-jy.pdf" target="_blank">Resume</a>
 			</li>
 		</ul>
 	</div>
@@ -82,7 +82,7 @@
 			<div class="wave2"> </div>
 		</div>
 		-->
-		<div class="section-title" id="workSection">Work</div>
+		<div #worksection class="section-title" id="workSection">Work</div>
 		<div class="row justify-content-center">
 			<div class="col-lg-5 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
 				<div class="thumb-image square" >
@@ -119,6 +119,44 @@
 				</p>
 				<p class="project-description">
 					A mobile meal planner that optimizes use of time, budget, and resources
+				</p>
+			</div>
+
+			<div class="col-lg-5 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+				<div class="thumb-image square">
+					<div class="crop-img">
+						<a href="projects/involved">
+							<img src="assets/img/projectthumb-03.png">
+						</a>
+					</div>
+				</div>
+				<p class="project-categories">
+					/7-day Design Challenge /UX Design /UX Research /Mobile App Design
+				</p>
+				<p class="project-title">
+					Involved - Google Design Exercise 2019
+				</p>
+				<p class="project-description">
+					Socializing the experience for new students to find the right organizations to engage with
+				</p>
+			</div>
+
+			<div class="col-lg-5 col-sm-12 project hid-on-init" animateOnScroll animationName="animated fadeIn">
+				<div class="thumb-image square">
+					<div class="crop-img">
+						<a href="projects/poco">
+							<img src="assets/img/projectthumb-04.png">
+						</a>
+					</div>
+				</div>
+				<p class="project-categories">
+					/VR Design /Game Design /Game Development /UX Design
+				</p>
+				<p class="project-title">
+					Poco A Poco - VR Rhythm Game
+				</p>
+				<p class="project-description">
+					A VR immersive experience to enjoy classical music
 				</p>
 			</div>
 
@@ -172,7 +210,7 @@
 						<p>If you are interested in talking with me, please feel free to drop me an email at: <a href="mailto:youjing402@gmail.com?Subject=Hi%20Jing" target="_top">youjing402@gmail.com</a></p>
 					</div>
 					<div class="intro-map" *ngIf="selectedPart == 'map'">
-						<p>I came from Xiamen, a beautiful island located in Southeastern China. I entered National University of <b>Singapore</b> to study <b>Computer Science</b> and started to experience with the beauty of multiculturalism. </p> 
+						<p>I came from Xiamen, a beautiful island located in Southeastern China. I entered National University of <b>Singapore</b> to study <b>Computer Science</b> and explore the beauty of technology. </p> 
 						<p>During my undergrad years, I spent half a year in Europe to complete the exchange program. There, I developed more interests in HCI through completing design courses in <b>Sweden</b>, and decided to continue my study after graduation.</p>
 						<p>Now that I'm in <b>US</b> studying <b>HCI design</b>, I hope to bring viewpoints from my background, and to grow as a product designer in the IT industry. </p>
 					</div>
