--- a/src/app/common-project.scss
+++ b/src/app/common-project.scss
@@ -94,6 +94,14 @@
 	width: 70%;
 }
 
+.img-30 {
+	width: 30%;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
 .img-50 {
 	width: 50%;
 	text-align: center;
@@ -261,6 +269,7 @@
 	padding-bottom: 100px;
 	background: black;
 	width: 100vw;
+	overflow: hidden;
 }
 
 .separate-big-part {
@@ -343,6 +352,10 @@
 	padding-right: 10%;
 }
 
+.mid-font {
+	font-size: 17px;
+}
+
 .question {
 	font-family: 'Roboto Slab', sans-serif;
 	//font-weight: bold;
@@ -352,6 +365,10 @@
 	font-family: 'Roboto Slab', sans-serif;
 	font-size: 20px;
 	//font-weight: bold;
+}
+
+.margin-80 {
+	margin-bottom: 80px;
 }
 
 .margin-50 {
@@ -426,9 +443,12 @@
 		background-color: #84AF4A;
 		padding-top: 100px;
 		padding-bottom: 100px;
-		padding-left: 100px;
-		padding-right: 100px;
+		padding-left: 5%;
+		padding-right: 5%;
 		overflow: hidden;
+		width: 100vw;
+		margin-right: 0px;
+		margin-left: 0px;
 	//max-height: 100vh;
 
 	color: white;
@@ -482,4 +502,234 @@
 	width: 120%;
 	position: relative;
 	left: -10%;
+}
+
+.left-align {
+	text-align: left !important;
+}
+
+.overflow-hidden {
+	overflow: hidden;
+}
+
+.hideOnInit {
+	visibility: hidden;
+}
+
+
+
+
+
+
+* {
+	box-sizing: border-box;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+	position: fixed;
+  //top: 500px;
+  //max-width: 100%;
+  height: 100vh;
+  top: 30%;
+  right: 5%;
+  font-size: 12px;
+  color: #BBB;
+  //margin: 0 auto;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+/* Container around content */
+a .container {
+	padding: 10px 20px;
+	position: relative;
+	background-color: inherit;
+  //width: 50%;
+
+  color: #bbb;
+}
+
+/* The circles on the timeline */
+a .container::after {
+	content: '';
+	position: absolute;
+	width: 15px;
+	height: 15px;
+	right: -5px;
+  //background-color: white;
+  border: 3px solid #DDD;
+  top: 12px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+a .container:hover {
+	text-decoration: none !important;
+
+	&:after {
+		-webkit-transform: scale(1.35);
+		transform: scale(1.35);
+	}
+}
+
+.timeline a:hover {
+	text-decoration: none !important;
+}
+
+a .container.selected {
+	color: #000 !important;
+	text-decoration: none !important;
+	font-weight: bold;
+
+	&:after {
+		border: 4px solid #000;
+	}
+
+	&:hover {
+		text-decoration: none !important;
+	}
+}
+
+/* Place the container to the left */
+.left {
+	left: 0;
+
+	.menu-section-title {
+		text-align: right;
+	}
+}
+
+/* Place the container to the right */
+.right {
+  //left: 50%;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+	left: -16px;
+}
+
+/* The actual content */
+.content {
+	padding: 20px 30px;
+	background-color: white;
+	position: relative;
+	border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+/* Place the timelime to the left */
+.timeline::after {
+	left: 31px;
+}
+
+/* Full-width containers */
+.container {
+	width: 100%;
+	padding-left: 70px;
+	padding-right: 25px;
+}
+
+/* Make sure that all arrows are pointing leftwards */
+.container::before {
+	left: 60px;
+	border: medium solid white;
+	border-width: 10px 10px 10px 0;
+	border-color: transparent white transparent transparent;
+}
+
+/* Make sure all circles are at the same spot */
+.left::after, .right::after {
+	left: 15px;
+}
+
+/* Make all right containers behave like the left ones */
+.right {
+	left: 0%;
+}
+}
+
+
+ul.navbar-nav li.dropdown > .dropdown-menu {
+	min-width: 0px;
+	border-radius: 0px;
+	border: 0px solid transparent;
+}
+
+
+@media (min-width: 979px) {
+	ul.navbar-nav li.dropdown:hover > .dropdown-menu {
+		display: block;
+	}
+
+	.navbar {
+		padding: 0rem 1rem;
+		width: 100vw;
+
+		.nav-link {
+			padding: 1rem 1rem;
+		}
+	}
+
+	ul.navbar-nav li.dropdown > .dropdown-menu {
+		min-width: 0px;
+		border-radius: 0px;
+		border: 0px solid transparent;
+
+		>:hover {
+			min-width: 0px;
+			border-radius: 0px;
+			border: 0px solid transparent;
+		}
+
+		.purple-text:hover {
+			color: #6969c6;
+		}
+
+		.green-text:hover {
+			color: #84AF4A;
+		}
+
+		.coral-text:hover {
+			color: #FF7A6E;
+		}
+
+		.blue-text:hover {
+			color: #6991C6;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.big-part-title {
+		font-size: 50px;
+	}
+
+	.big-part-inner {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+
+	.navbar {
+		padding: 0rem;
+
+		.dropdown-item {
+			text-align: right;
+			color: #555;
+		}
+
+		a {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+
+		.navbar-brand {
+			padding: 1rem 1rem;
+		}
+	}
+
+	.navbar-dark .navbar-toggler {
+		border: 0px solid transparent;
+	}
 }
