--- a/src/app/common-project.scss
+++ b/src/app/common-project.scss
@@ -26,6 +26,15 @@
   }
 }
 
+.no-padding {
+	padding: 0px;
+}
+
+.no-lr-margin {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 .normal-text {
 	font-size: 17px;
 }
@@ -149,6 +158,10 @@
 	.icon-intro {
 		font-size: 15px;
 	}
+}
+
+.margin-5 {
+	margin-bottom: 5px;
 }
 
 .left-align{
@@ -435,6 +448,12 @@
 
 .margin-half-rm {
 	margin-bottom: .2rem;
+}
+
+.clickable {
+	color: #007bff;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 .small-section {
