more comment added to DH

--- a/src/app/common-project.scss
+++ b/src/app/common-project.scss
@@ -104,6 +104,14 @@
 	display: block;
 }
 
+.img-60 {
+	width: 60%;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
 .img-70-left {
 	width: 70%;
 }
