--- a/src/app/dunhuang/dunhuang.component.html
+++ b/src/app/dunhuang/dunhuang.component.html
@@ -486,22 +486,61 @@
 						</div>
 					</div>
 
-					<p>Below are some key design decisions we made along with rationales behind when designing the 3 key stages: pre-donation, donation, and post-donation.</p>
+					<p class="margin-75">Below are some key design decisions we made along with rationales behind when designing the 3 key stages: <mark>pre-donation, donation, and post-donation</mark>.</p>
 
 					<div>
 						<div class="section">
 							<p class="sub-title"> <b> Pre-Donation </b> </p>
-							<p class="sub-big-title"> <b> How to effectively build up tension and atmosphere? </b> </p>
+							<p class="sub-big-title margin-50"> <b> How to effectively build tension and atmosphere? </b> </p>
+
+							<p><b>1. Construct concise yet engaging introduction</b></p>
+							<p>To increase the sense of engagement, it's important to design an emmersive opening experience with the use of storytelling. However, as we learned from previous products, it can't be long, or else users can be easily distracted and bored. We thus strived to <mark>make every screen count</mark>:</p>
+							<img src="assets/img/dh-decision-1-1.png" class="part-img margin-75">
+							<div class="row">
+								<div class="col-lg-6">
+									<p><b>2. Build up the sense of engagement and urgency</b></p>
+									<p>To increase the sense of engagement, we wanted to make users feel they're <mark>part of something large</mark>. Also, creating the sense of urgency builds the tension. </p>									
+								</div>	
+								<div class="col-lg-6">
+									<p><b>3. Reduce interference in the main flow</b></p>
+									<p>To promote donation, we purposefully kept the overall flow short and focused. Viewing pieces lighted up by others builds users' motivation to donate, but users may also get easily interrupted from it.</p>	
+								</div>	
+							</div>	
+
+							<div class="row">
+								<div class="col-lg-6">
+									<img src="assets/img/dh-decision-1-2.png" class="img-70 margin-50">
+								</div>
+								<div class="col-lg-6">
+									<img src="assets/img/dh-decision-1-3.png" class="part-img margin-50">
+								</div>
+							</div>	
 						</div>
 
 						<div class="section">
 							<p class="sub-title"> <b> Donation </b> </p>
-							<p class="sub-big-title"> <b> How to "push" users on the spot to donate?  </b> </p>
+							<p class="sub-big-title"> <b> How to help users make up their minds on the spot of donation?  </b> </p>
+							<p class="margin-50">Donation is the stage where users have to pause and think about carefully, as they are asked to pay real money. However, the situation is trickier than traditional e-commerce: </p>
+							<p><b>1. Visualize the reward of payment, yet not to make it too result-oriented</b></p>
+							<p>To encourage payment, we needed to give users some sense of what they're getting after the payment, but we can't put too much weight on the final reward:</p>
+							<img src="assets/img/dh-decision-2-1.png" class="part-img margin-50">
+
+							<p><b>2. Facilitate fast decision by reducing choices</b></p>
+							<p>From the past data of Tencent Charity, providing too many options with insignificant differences may cause decidophobia, which will lower users’ willingess to make the payment. Thus, we want to get rid of unnecessary distraction:</p>
+							<img src="assets/img/dh-decision-2-2.png" class="img-50 margin-50">
 						</div>
 
 						<div class="section">
 							<p class="sub-title"> <b> Post-Donation </b> </p>
 							<p class="sub-big-title"> <b> How to encourage users to share? </b> </p>
+
+							<p><b>1. Design Goals and Experience Division</b></p>
+							<p>We divided the post-donation experience into 3 levels: <mark>completion, acknowledgement, and sharing</mark>. Through the progressive experience, users are satisfied on different levels, from forming an impressive donation experience to actually want to share what they get to their friends.</p>
+							<img src="assets/img/dh-after-overview.png" class="img-70 margin-50">
+
+							<p><b>2. Sharing and Social Currency</b></p>
+							<p>When designing the sharable content, we thought about what will trigger users to share, and therefore we looked at the model of personal <mark>social currency</mark>. Considering features of the young population that we are serving, they are people who love showcasing their personality and identity when sharing things on social media, and they love talking about and comparing unique personalized results with friends. Therefore, we mainly focused on <mark>identity, conversation and valuable information</mark> when designing the values of the sharable content.</p>
+							<img src="assets/img/dh-social-currency.png" class="img-70">
 						</div>
 
 					</div>
