--- a/src/app/itale/itale.component.html
+++ b/src/app/itale/itale.component.html
@@ -436,16 +436,30 @@
 						<div class="section">
 							<p class="sub-title"> <b> [Interaction & Layout] </b> </p>
 							<p class="sub-big-title"> <b> How to set up the scene and story elements </b> </p>
+
+							<p>Scene setup is where the major part of story brainstorming begins. We want children to get a better understanding of scene construction and get inspiration easily. We first tried out the separate-scene step-by-step setup:</p>
+							<img src="assets/img/itale-decision-1-1.png" class="margin-50 part-img">
+
+							<p>We then explored UI options that combine the scene setup with the interactive canvas and dealt with UI issues arising from it.</p>
+							<img src="assets/img/itale-decision-1-2.png" class="margin-50 part-img">
+
 						</div>
 
 						<div class="section">
 							<p class="sub-title"> <b> [Interaction] </b> </p>
 							<p class="sub-big-title"> <b> When & where to incorporate during-scene guidance </b> </p>
+							<p>During-scene guidance is what keeps children going when they are stuck or losing passion. On one hand, inspiration should appear in time with surprise to provoke new ideas, yet on the other hand, it shouldn't disturb their original thought process.</p>
+							<p>Originally, we want to make the mechanism more intuitive and natural, so we tried adding in random events during the scene:</p>
+							<img src="assets/img/itale-decision-2-1.png" class="margin-50 img-60">
+							<p>To improve the sense of autonomy and keep the experience natural, I designed the inspiration assistant that is always available to provide semi-random suggestions, and make automatic events more subtle that users can choose to use in the story or simply ignore.</p>
+							<img src="assets/img/itale-decision-2-2.png" class="margin-50 part-img">
 						</div>
 
 						<div class="section">
 							<p class="sub-title"> <b> [Interaction] </b> </p>
 							<p class="sub-big-title"> <b> The right amount of planning </b> </p>
+							<p>Planning is essential as it helps children get a better grasp of the overall story flow. We wanted planning to help children organize thoughts and develop plots, but not to overwhelm them. I explored different forms and amount of planning:</p>
+							<img src="assets/img/itale-decision-3.png" class="margin-50 img-70">
 						</div>
 
 					</div>
@@ -481,8 +495,8 @@
 					</div>		
 					
 					<p class="sub-big-title"> <b> Overall Feedback </b> </p>
-					<p>We received very positive feedback from both parents and educators:</p>
-					[img]
+					<p>We received very positive feedback from both parents and educators, and here are some quotes from them:</p>
+					<img class="part-img margin-75" src="assets/img/itale-feedback.png">
 
 					<p class="sub-big-title"> <b> UX Iterations </b> </p>
 					<p>There are also iterations to be made: aside from feature-related concerns that have been incorporated in the last part, some other general UX issues include:</p>
